# USV_simulator-in-VRX

./: Mywamv_Competition.md  README.md  VRX_Tutorial  VRX_Tutorial.md
my_wamv/: dubins_path_generator.py  keyboard_control_node.py  mywamv.launch.py  mywamv_keyboard_control.py  mywamv_path_follow_LOS.py  mywamv_path_follow_PID.py  mywamv_path_follow_adpLOS.py  mywamv_station_keeping.py  mywamv_velocity.py  path_static_tf.rviz
my_wamv/config/: mywamv_component_config.xacro  mywamv_component_config.yaml
my_wamv/urdf/: my_wamv.urdf
vrx_ws/: .gitattributes  README.md
vrx_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
vrx_ws/install/lib/mywamv_control/: dubins_path_generator.py  figure_eight_generator.py  mywamv_inverse_kinematics.py  mywamv_path_follow.py
vrx_ws/install/lib/vrx_ros/: optical_frame_publisher  pose_tf_broadcaster
vrx_ws/install/share/mywamv_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
vrx_ws/install/share/vrx_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
vrx_ws/install/share/vrx_gz/: local_setup.dsv  local_setup.sh  mywamv_inverse_kinematics.py  mywamv_keyboard_control_node.py  mywamv_path_follow.py  package.bash  package.dsv  package.ps1  package.sh  package.zsh
vrx_ws/install/share/vrx_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
vrx_ws/log/: latest_build
vrx_ws/src/mywamv_control/: package.xml  setup.cfg  setup.py
vrx_ws/src/mywamv_control/scripts/: mywamv_wayfinding.py
(+36 files in other folders)
